move help with toggle '?' into svg; check prompt returns

--- a/js/svgtest.xhtml
+++ b/js/svgtest.xhtml
@@ -41,7 +41,7 @@ function initNet() {
   // net.removeTransition(t1);
 
   document.body.insertBefore(net.svg,document.body.firstChild);
-  document.body.insertBefore(net.help,document.body.firstChild);
+  // document.body.insertBefore(net.help,document.body.firstChild);
   // listProperties('net.svg.',net.svg);
 
   var ls = net.toString().split("\n");
