--- a/js/svgtest.xhtml
+++ b/js/svgtest.xhtml
@@ -47,7 +47,7 @@ function initNet() {
     });
   */
 
-  var net  = new Net('net');
+  var net  = new Net('net',5000,3000);
 
   /*
   var xhr = new XMLHttpRequest(); // browser-specific
@@ -59,23 +59,25 @@ function initNet() {
   net.fromPNML(pnml);
   message(xhr.responseText);
   */
+
+  /*
   if (document.implementation && document.implementation.createDocument) {
     var pnml = document.implementation.createDocument(null,null,null);
     pnml.async = false;
     // pnml.load('pnml/desel-esparza-5-2.pnml');
-    // pnml.load('pnml/desel-esparza-5-4.pnml');
+    pnml.load('pnml/desel-esparza-5-4.pnml');
     // pnml.load('pnml/desel-esparza-commoners.pnml');
     // pnml.load('pnml/Piscine.pnml');
     // pnml.load('pnml/SharedMemory-Hlpn.pnml');
     // pnml.load('pnml/SharedMemory.pnml');
     // pnml.load('pnml/Token-ring.pnml'); // fails
     // pnml.load('pnml/standardExample.pnml');
-    pnml.load('pnml/philo.pnml');
+    // pnml.load('pnml/philo.pnml');
     message(pnml);
     net.fromPNML(pnml,4,100);
   }
+  */
 
-  /*
   var in1  = net.addPlace('in1' , 1000, 1000);
   var in2  = net.addPlace('in2' , 1000, 2000);
   var t1   = net.addTransition('t1',2000,1500);
@@ -86,11 +88,12 @@ function initNet() {
   var a2 = net.addArc(in2,t1);
   var a3 = net.addArc(t1,out1);
   var a4 = net.addArc(t1,out2);
-  */
 
   // net.removeArc(a2);
   // net.removePlace(out1);
   // net.removeTransition(t1);
+
+  net.toPNML();
 
   document.body.insertBefore(net.svg,document.body.firstChild);
   // document.body.insertBefore(net.help,document.body.firstChild);
