--- a/js/svgtest.xhtml
+++ b/js/svgtest.xhtml
@@ -60,24 +60,6 @@ function initNet() {
   message(xhr.responseText);
   */
 
-  /*
-  if (document.implementation && document.implementation.createDocument) {
-    var pnml = document.implementation.createDocument(null,null,null);
-    pnml.async = false;
-    // pnml.load('pnml/desel-esparza-5-2.pnml');
-    pnml.load('pnml/desel-esparza-5-4.pnml');
-    // pnml.load('pnml/desel-esparza-commoners.pnml');
-    // pnml.load('pnml/Piscine.pnml');
-    // pnml.load('pnml/SharedMemory-Hlpn.pnml');
-    // pnml.load('pnml/SharedMemory.pnml');
-    // pnml.load('pnml/Token-ring.pnml'); // fails
-    // pnml.load('pnml/standardExample.pnml');
-    // pnml.load('pnml/philo.pnml');
-    message(pnml);
-    net.fromPNML(pnml,4,100);
-  }
-  */
-
   var in1  = net.addPlace('in1' , 1000, 1000);
   var in2  = net.addPlace('in2' , 1000, 2000);
   var t1   = net.addTransition('t1',2000,1500);
@@ -96,8 +78,23 @@ function initNet() {
   net.toPNML();
 
   document.body.insertBefore(net.svg,document.body.firstChild);
-  // document.body.insertBefore(net.help,document.body.firstChild);
-  // listProperties('net.svg.',net.svg);
+  var fileInput = document.createElement('input');
+  fileInput.type  = 'file';
+  fileInput.name  = 'load PNML'; // TODO: visualize input field purpose
+  fileInput.id    = 'fileInput';
+  fileInput.style.width = '100%';
+  fileInput.addEventListener('change',function(){
+      if (document.implementation && document.implementation.createDocument) {
+        var pnml = document.implementation.createDocument(null,null,null);
+        pnml.async = false;
+        var filename = 'pnml/'+this.value.replace(/^C:[\/\\]fake_path[\/\\]/,'');
+        pnml.load(filename);
+        net.removeAll();
+        net.fromPNML(pnml,4,100);
+      } else
+        message('sorry, cannot load');
+    },false);
+  document.body.insertBefore(fileInput,net.svg);
 
   var ls = net.toString().split("\n");
   for (var l in ls) message(ls[l]);
