--- a/js/svgtest.xhtml
+++ b/js/svgtest.xhtml
@@ -49,17 +49,6 @@ function initNet() {
 
   var net  = new Net('net',5000,3000);
 
-  /*
-  var xhr = new XMLHttpRequest(); // browser-specific
-  message(xhr);
-  xhr.open('GET','file:c:/private/archive/pnml/desel-esparza-5-2.pnml',false);
-  xhr.send(null);
-  var pnml = xhr.responseXML;
-  message(pnml);
-  net.fromPNML(pnml);
-  message(xhr.responseText);
-  */
-
   var in1  = net.addPlace('in1' , 1000, 1000);
   var in2  = net.addPlace('in2' , 1000, 2000);
   var t1   = net.addTransition('t1',2000,1500);
@@ -78,23 +67,63 @@ function initNet() {
   net.toPNML();
 
   document.body.insertBefore(net.svg,document.body.firstChild);
+
+  // loading PNML files (partially implemented)
   var fileInput = document.createElement('input');
   fileInput.type  = 'file';
-  fileInput.name  = 'load PNML'; // TODO: visualize input field purpose
+  fileInput.name  = 'loadPNML'; // TODO: visualize input field purpose
   fileInput.id    = 'fileInput';
-  fileInput.style.width = '100%';
+  fileInput.style.width = 'auto';
   fileInput.addEventListener('change',function(){
-      if (document.implementation && document.implementation.createDocument) {
-        var pnml = document.implementation.createDocument(null,null,null);
-        pnml.async = false;
-        var filename = 'pnml/'+this.value.replace(/^C:[\/\\]fake_path[\/\\]/,'');
-        pnml.load(filename);
-        net.removeAll();
-        net.fromPNML(pnml,4,100);
-      } else
-        message('sorry, cannot load');
+      var filename = 'pnml/'+this.value.replace(/^C:[\/\\]fake_path[\/\\]/,'');
+      var xhr = new XMLHttpRequest(); // browser-specific
+      xhr.open('GET',filename,false);
+      xhr.send(null);
+      var pnml = xhr.responseXML;
+      net.removeAll();
+      net.fromPNML(pnml);
     },false);
   document.body.insertBefore(fileInput,net.svg);
+
+  // exporting SVG files
+  // TODO: are size limits for data:-url still an issue? use document.write instead?
+  var exportSVG =document.createElement('input');
+  exportSVG.type = 'button';
+  exportSVG.id   = 'exportSVG';
+  exportSVG.value = 'export SVG';
+  exportSVG.style.width = 'auto';
+  exportSVG.addEventListener('click',function(){
+      // clone svg, then remove interactive elements (not needed for static output)
+      // TODO: cloning in opera 10.10 seems to convert some attribute representations
+      //       (eg, 'cx' from '100.1' to '100,1')
+      var svgOut = net.svg.cloneNode(true);
+      svgOut.removeChild(svgOut.querySelector('#cursorPalette'));
+      svgOut.removeChild(svgOut.querySelector('#netHelp'));
+      // why isn't the namespace attribute present by default?
+      svgOut.xmlns = svgNS;
+      // TODO: should we use DOM3 Load and Save / XMLSerializer / toXMLString instead?
+      //        or the DOM tree walkers?
+      var xml = listXML('',svgOut).join("\n");
+      messagePre(xml);
+      delete svgOut;
+      location = 'data:image/svg+xml,'+encodeURIComponent(xml);
+      // TODO: firefox tends to crash here?
+    },false);
+  document.body.insertBefore(exportSVG,fileInput.nextSibling);
+
+  // exporting PNML files (partially implemented)
+  // TODO: are size limits for data:-url still an issue? use document.write instead?
+  var exportPNML =document.createElement('input');
+  exportPNML.type = 'button';
+  exportPNML.id   = 'exportPNML';
+  exportPNML.value = 'export PNML';
+  exportPNML.style.width = 'auto';
+  exportPNML.addEventListener('click',function(){
+      var pnml = net.toPNML();
+      messagePre(pnml);
+      location = 'data:application/xml,'+encodeURIComponent(pnml);
+    },false);
+  document.body.insertBefore(exportPNML,fileInput.nextSibling);
 
   var ls = net.toString().split("\n");
   for (var l in ls) message(ls[l]);
@@ -116,10 +145,13 @@ function initNet() {
 
 </head>
 
-<body onload="initNet();JSEval('messages');ObjectViewer('viewer');">
+<body onload="initNet();JSEval('messages');ObjectViewer('messages');">
 
-<div id='viewer'/>
 <div id='messages'/>
+
+<hr/>
+
+
 
 </body>
 
