finish multipoint arc support

--- a/js/svgtest.xhtml
+++ b/js/svgtest.xhtml
@@ -9,6 +9,7 @@
 <head>
 
 <style type="text/css">
+.arc:hover   { stroke: blue }
 #svg         { float: left }
 div#messages { clear: both; margin: 10px; border: solid 1px blue; 
                height: 10em; overflow: scroll }
