module loading is now reusable

--- a/js/svgtest.xhtml
+++ b/js/svgtest.xhtml
@@ -44,7 +44,7 @@ function checkpoint(obj,before) {
 var before = checkpoint(window);
 ]]></script>
 
-<script type="text/javascript" src="netedit.js"/>
+<script type="text/javascript" src="modules.js"/>
 
 <script type="text/javascript"><![CDATA[
 
