add initial place markings and arc labels

--- a/js/svgtest.html
+++ b/js/svgtest.html
@@ -8,6 +8,8 @@
 <style type="text/css">
 .arc:hover   { stroke: blue }
 #svg         { float: left }
+.marking     { fill: green }
+.arclabel    { font-style: italic }
 div#messages { clear: both; margin: 10px; border: solid 1px blue; 
                height: 10em; overflow: scroll }
 </style>
